--- a/index.css
+++ b/index.css
@@ -1,172 +1,171 @@
 *{
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 body{
-    overflow-x: hidden;
-    background-color:#121316;
-    color: #fff;
-    
+  overflow-x: hidden;
+  background-color:#121316;
+  color: #fff;
+  
 }
 a{
-  text-decoration: none;
-  color: #ccc;
+text-decoration: none;
+color: #ccc;
 }
 /* NAVBAR */
 .logo{
-  font-family: fantasy;
+font-family: 'Sofia';
 }
 .navbar{
-    background-color:  #102131;
-    color: #fff;
-     height: 70px; 
-     top: 0;  
-     
+  background-color:  #102131;
+  color: #fff;
+   height: 70px; 
+   top: 0;  
+   font-family: 'Sofia';
 }
 ul{
-    list-style-type: none;
-   
-  }
+  list-style-type: none;
+ 
+}
 .navbar ul{
-    display: flex;
-    
+  display: flex;
+  
 }
 
 .navbar a{
-    color: #fff;
-    padding: 10px;
-    margin: 0 5px;
-    text-decoration: none;
+  color: #fff;
+  padding: 10px;
+  margin: 0 5px;
+  text-decoration: none;
 }
 
 .navbar a:hover{
-    border-bottom: 2px #fff solid ;
+  border-bottom: 2px #fff solid ;
 }
 .navbar .flex{
-    justify-content: space-around;
+  justify-content: space-around;
 }
 
 .flex{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  
+display: flex;
+justify-content: center;
+align-items: center;
+height: 100%;
+
 }
 /* Welcome section */
 .welcome-div{
-    text-align: center;
-   font-family: fantasy;
-   background-color: #102131;
-   border: 2px solid #102131;
-   box-shadow:   7px 7px 20px 0px rgba(0,0,0,.4),
-  4px 4px 5px 0px rgba(0,0,0,.3);
+  text-align: center;
+ font-family: 'Sofia';
+ background-color: #102131;
+ border: 2px solid #102131;
+ box-shadow:   7px 7px 20px 0px rgba(0,0,0,.4),
+4px 4px 5px 0px rgba(0,0,0,.3);
 }
 .welcome-div:hover{
-    animation:dreamy 0.3s;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-   
+  animation:dreamy 0.3s;
+animation-duration: 2s;
+animation-iteration-count: infinite;
+ 
 }
 .animm-div{
-    width: 100px;
-	height: 40px;
-	transform: skew(20deg);
-	background: #102131;
-   transition: width 2s, height 2s, transform 2s;
-    float: right;
-    margin-right: 20px;
-    margin-top: -70px;
-    font-family: monospace;
-  box-shadow:   7px 7px 20px 0px rgba(0,0,0,.4),
-  4px 4px 5px 0px rgba(0,0,0,.3);
+  width: 100px;
+height: 40px;
+transform: skew(20deg);
+background: #102131;
+ transition: width 2s, height 2s, transform 2s;
+  float: right;
+  margin-right: 20px;
+  margin-top: -70px;
+  font-family: monospace;
+box-shadow:   7px 7px 20px 0px rgba(0,0,0,.4),
+4px 4px 5px 0px rgba(0,0,0,.3);
+  
+    }
     
-      }
+    .animm-div:hover {
+      width: 50px;
+      height: 40px;
+      transform: rotate(200deg);
       
-      .animm-div:hover {
-        width: 50px;
-        height: 40px;
-        transform: rotate(200deg);
-        
-      } 
+    } 
 
-      .animm-div p{
+    .animm-div p{
+        text-align: center;
+    }
+
+
+    .animm-divv{
+      width: 100px;
+      height: 40px;
+      transform: skew(20deg);
+      background: #102131;
+     transition: width 2s, height 2s, transform 2s;
+      margin-left: 20px;
+      float: left;
+      margin-top: -70px;
+      font-family: monospace;
+      box-shadow:   7px 7px 20px 0px rgba(0,0,0,.4),
+4px 4px 5px 0px rgba(0,0,0,.3);
+        }
+
+
+        .animm-divv:hover {
+          width: 50px;
+          height: 40px;
+          transform: rotate(200deg);
+          
+        } 
+        .animm-divv p{
           text-align: center;
       }
-
-
-      .animm-divv{
-        width: 100px;
-        height: 40px;
-        transform: skew(20deg);
-        background: #102131;
-       transition: width 2s, height 2s, transform 2s;
-        margin-left: 20px;
-        float: left;
-        margin-top: -70px;
-        font-family: monospace;
-        font-family: 'Arial Narrow', Arial, sans-serif;
-        box-shadow:   7px 7px 20px 0px rgba(0,0,0,.4),
-  4px 4px 5px 0px rgba(0,0,0,.3);
-          }
-
-
-          .animm-divv:hover {
-            width: 50px;
-            height: 40px;
-            transform: rotate(200deg);
-            
-          } 
-          .animm-divv p{
-            text-align: center;
-        }
 /* About me */
 .section-cli{
-    width: 35%;
-    height: 70%;
-    }
-    .flex-container{
+  width: 35%;
+  height: 70%;
+  }
+  .flex-container{
 display: flex;
 
-    }
-    .flot-item{
-        float: right;
-        text-align: right;
-        width: 300px;
-        margin-top: -551px;
-      
-     }
-  .my-img {
-    width:280px; 
-    height:280px;
-    transition: .5s ease;
-    backface-visibility: hidden;
-    border: 15px solid #1F2229;
-    padding: 20px;
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-     
   }
-  
-  .my-img:hover {
-    transform: translatey(-10%); 
+  .flot-item{
+      float: right;
+      text-align: right;
+      width: 300px;
+      margin-top: -556px;
     
-  }
+   }
+.my-img {
+  width:280px; 
+  height:280px;
+  transition: .5s ease;
+  backface-visibility: hidden;
+  border: 15px solid #1F2229;
+  padding: 20px;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+   
+}
+
+.my-img:hover {
+  transform: translatey(-10%); 
+  
+}
 
 /* writer-section */
 .writer-section{
-  position: relative;
-  top: -30px;
+position: relative;
+top: -30px;
 }
 .writer-section h2{
 text-align: center;
 display: block;
 
 }
-/* Flex container */
+/* block container */
 .block-item{
-    width: 430px;
-    margin: auto;
-    padding: 10px;
-   
+  width: 430px;
+  margin: auto;
+  padding: 10px;
+ 
 }
 .block-relative-item{
 position: relative;
@@ -174,218 +173,218 @@ left: 100px;
 top: -50px;
 }
 .block-absolute-item{
-    position: relative;
-    left: -100px;
+  position: relative;
+  left: -100px;
 top: -100px;
 text-align: center;
 }
 .text-ga p{
-  text-align: right
+text-align: right
 }
 .text-ga p:hover{
-  font-weight: bold;
+font-weight: bold;
 }
 .div-box{
-    width:275px; 
-    position: relative;
-    left: 20px;
-    margin-top: 10px; 
-    background-color: #1F2229;
-    border: 15px solid #1F2229;
-    box-shadow: 7px 7px 20px 0px rgba(0,0,0,.4),
-    3px 15px 0 #102131;
-  }
-  .text-gra{
-    padding-bottom: 35px;
-    font-family: fantasy;
-    font-weight: lighter;
-    text-align: center;
-    font-size: 1.2em;
-    text-align: center;
-    color: transparent;
-    background-clip: text;
-    border-radius: 3px; 
-  }
-  
-  
-  
-  .text-gra:hover{
-    color:#ccc;
-    padding: 5 5px;
-    
-  }
-  
-  .div-box:hover{
-    border: 20px solid #1F2229;
-  }
-  /* button */
-  .button {
-    border: none;
-    outline: 0;
-    display: inline-block;
-    padding: 8px;
-    color:white;
-    background-color: #102131;
-    text-align: center;
-    cursor: pointer;
-   width: 50%;
-   position: relative;
-   box-shadow:
-   7px 7px 20px 0px rgba(0,0,0,.4),
-   4px 4px 5px 0px rgba(0,0,0,.3);
-   
-  }
-  .button:before,
-  .button:after {
-  position: absolute;
-  content: "";
-  height: 0%;
-  width: 40px;
- box-shadow:
-   -1px -1px 5px 0px rgba(255,255,255,1),
-   -4px -4px 5px 0px rgba(255,255,255,1),
-   7px 7px 20px 0px rgba(0,0,0,.4),
-   4px 4px 5px 0px rgba(0,0,0,.3);
-   
+  width:275px; 
+  position: relative;
+  left: 20px;
+  margin-top: 10px; 
+  background-color: #1F2229;
+  border: 15px solid #1F2229;
+  box-shadow: 7px 7px 20px 0px rgba(0,0,0,.4),
+  3px 15px 0 #102131;
 }
-.button:before {
-  left: 50px;
-  top: 0;
-  transition: all 500ms ease;
+.text-gra{
+  padding-bottom: 35px;
+  font-family: 'Sofia';
+  font-weight: lighter;
+  text-align: center;
+  font-size: 1.2em;
+  text-align: center;
+  color: transparent;
+  background-clip: text;
+  border-radius: 3px; 
 }
-.button:after {
-  left: 0px;
-  bottom: 0;
-  transition: all 500ms ease;
+
+
+
+.text-gra:hover{
+  color:#ccc;
+  padding: 5 5px;
+  
 }
-  .button:hover {
-    transform: translate(-10%); 
-    font-weight: bolder;
-    background: transparent;
-    color: #76aef1;
-    box-shadow: none;
-  }
-  .button:hover:before {
-    transition: all 500ms ease;
-    height: 100%;
-    width: 50%;
-  }
-  .button:hover:after {
-    transition: all 500ms ease;
-    height: 100%;
-    width: 50%;
-  }
-  
-  
-  
-  
-/* grid */
- .card{
-  box-shadow:
-  7px 7px 20px 0px rgba(0,0,0,.4),
-  4px 4px 5px 0px rgba(0,0,0,.3);
-     transition: 0.3s;
-        background-color: #1F2229;
-        border-radius: 10px;
-        padding: 20px;
-        margin: 10px;
-        border: 1px solid #222;
-    }
- 
- .card:hover{
-     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);;
- }
- .hh4:hover{
-     font-weight: lighter;
- }
- .hh4{
-     margin-left: 30px;
-     margin-top: 30px;
-     z-index: 3;
-     font-family: fantasy;
- }
- 
-  /*Project-section*/
-  .my-projects{
-   text-align: center;
-   margin-top: -170px;
+
+.div-box:hover{
+  border: 20px solid #1F2229;
 }
-.h2list{
-  border: 5px solid #102131;;
+/* button */
+.button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color:white;
   background-color: #102131;
   text-align: center;
-  
+  cursor: pointer;
+ width: 50%;
+ position: relative;
+ box-shadow:
+ 7px 7px 20px 0px rgba(0,0,0,.4),
+ 4px 4px 5px 0px rgba(0,0,0,.3);
+ 
+}
+.button:before,
+.button:after {
+position: absolute;
+content: "";
+height: 0%;
+width: 40px;
+box-shadow:
+ -1px -1px 5px 0px rgba(255,255,255,1),
+ -4px -4px 5px 0px rgba(255,255,255,1),
+ 7px 7px 20px 0px rgba(0,0,0,.4),
+ 4px 4px 5px 0px rgba(0,0,0,.3);
+ 
+}
+.button:before {
+left: 50px;
+top: 0;
+transition: all 500ms ease;
+}
+.button:after {
+left: 0px;
+bottom: 0;
+transition: all 500ms ease;
+}
+.button:hover {
+  transform: translate(-10%); 
+  font-weight: bolder;
+  background: transparent;
+  color: #76aef1;
+  box-shadow: none;
+}
+.button:hover:before {
+  transition: all 500ms ease;
+  height: 100%;
+  width: 50%;
+}
+.button:hover:after {
+  transition: all 500ms ease;
+  height: 100%;
+  width: 50%;
+}
+
+
+
+
+/* grid */
+.card{
+box-shadow:
+7px 7px 20px 0px rgba(0,0,0,.4),
+4px 4px 5px 0px rgba(0,0,0,.3);
+   transition: 0.3s;
+      background-color: #1F2229;
+      border-radius: 10px;
+      padding: 20px;
+      margin: 10px;
+      border: 1px solid #222;
+  }
+
+.card:hover{
+   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);;
+}
+.hh4:hover{
+   font-weight: lighter;
+}
+.hh4{
+   margin-left: 30px;
+   margin-top: 30px;
+   z-index: 3;
+   font-family: 'Sofia';
+}
+
+/*Project-section*/
+.my-projects{
+ text-align: center;
+ margin-top: -170px;
+}
+.h2list{
+border: 5px solid #102131;
+background-color: #102131;
+text-align: center;
+
 }
 .second-div-list img{
-    border-radius: 4px;
-    margin-left: 6px;
-    width: 250px;
+  border-radius: 4px;
+  margin-left: 6px;
+  width: 250px;
 }
 .second-div-list{
-    display: flex;
+  display: flex;
 }
 .list-div-width{
-    width: 100%;
-    cursor: pointer;
-    overflow-x: auto;
-    margin-top: -19px;
-    background-color: #121316;
+  width: 100%;
+  cursor: pointer;
+  overflow-x: auto;
+  margin-top: -19px;
+  background-color: #121316;
 }
 ::-webkit-scrollbar {
-  width: 0px;
-  height: 0px;
+width: 0px;
+height: 0px;
 }
 
 .project-img{
-    background-color: #1F2229;
-    box-shadow: 7px 7px 20px 0px rgba(0,0,0,.4),
-  4px 4px 5px 0px rgba(0,0,0,.3);;
-    margin-bottom: 25px;
-    margin-left: 10px;
+  background-color: #1F2229;
+  box-shadow: 7px 7px 20px 0px rgba(0,0,0,.4),
+4px 4px 5px 0px rgba(0,0,0,.3);;
+  margin-bottom: 25px;
+  margin-left: 10px;
 }
 .project-img:hover{
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);;
+box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);;
 }
 div.container{
-   text-align: center; 
-   padding: 10px 20px;
-   
+ text-align: center; 
+ padding: 10px 20px;
+ 
 
 }
 /* animation */
 .ball-round{
-  position: fixed;
-    animation-name: ballsdiv; 
-    animation-duration: 5s; 
-    display: inline-block;
+position: fixed;
+  animation-name: ballsdiv; 
+  animation-duration: 5s; 
+  display: inline-block;
+  width: 0;
+  height: 0;
+  border-right:  .3em solid transparent;
+  border-bottom: .7em  solid #fff;
+  border-left:   .3em solid transparent;
+  font-size: 24px;
+}
+  .ball-round:before, .ball-round:after {
+    content: ''; 
+    display: block;
     width: 0;
     height: 0;
-    border-right:  .3em solid transparent;
-    border-bottom: .7em  solid #fff;
-    border-left:   .3em solid transparent;
-    font-size: 24px;
+    position: absolute;
+    top: .6em;
+    left: -1em;
+    border-right:  1em solid transparent;
+    border-bottom: .7em  solid #07131f;
+    border-left:   1em solid transparent;
+    transform: rotate(-35deg);
   }
-    .ball-round:before, .ball-round:after {
-      content: ''; 
-      display: block;
-      width: 0;
-      height: 0;
-      position: absolute;
-      top: .6em;
-      left: -1em;
-      border-right:  1em solid transparent;
-      border-bottom: .7em  solid #07131f;
-      border-left:   1em solid transparent;
-      transform: rotate(-35deg);
-    }
-    
-    .ball-round:after {  
-      transform: rotate(35deg);
-    }
+  
+  .ball-round:after {  
+    transform: rotate(35deg);
+  }
 #coral{
 
 left: 30%;
- 
+
 }
 #pink {
 
@@ -402,16 +401,17 @@ left: 80%;
 
 /* footer */
 
-    footer{
-        padding: 30px;
-        text-align: center;
-        
-        background:#1F2229;;
-       font-family: fantasy;
-        
-      }
+  footer{
+      padding: 30px;
+      text-align: center;
+      
+      background:#1F2229;;
+      font-family: 'Sofia';  
+    }
 #socials i{
 background-color:  #102131;
 box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-     
+ 
 }
+
+
