--- a/mediaindex.css
+++ b/mediaindex.css
@@ -1,192 +1,193 @@
- /* buti */
-  .butterfly {
+/* ..... */
+/* buti */
+.butterfly {
+  position: absolute;
+  z-index: 1;
+  top: 55%;
+  left: 27%;
+  transform: translate(-50%, -50%);
+  width: 325px;
+  height: 215px;
+}
+  .body {
     position: absolute;
-    z-index: 1;
-    top: 55%;
-    left: 27%;
-    transform: translate(-50%, -50%);
-    width: 325px;
-    height: 215px;
+    z-index: 3;
+    top: 65px;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 25px;
+    width: 20px;
+    height: 40px;
+    border-radius: 30% 30% 50% 50%;
+    background: #102131;
+    box-shadow: 2px 2px 8px #000;
   }
-    .body {
+    .body:after {
+      content: "";
       position: absolute;
-      z-index: 3;
-      top: 65px;
-      left: 50%;
-      transform: translateX(-50%);
-      margin-top: 25px;
-      width: 20px;
-      height: 40px;
-      border-radius: 30% 30% 50% 50%;
-      background: #102131;
-      box-shadow: 2px 2px 8px #000;
+      top: 28px;
+      left: 0px;
+      width: 0;
+      height: 0;
+      border-left: 10px solid transparent;
+      border-right: 10px solid transparent;
+      border-top: 35px solid #102131;
     }
-      .body:after {
+    .head {
+      position: absolute;
+      z-index: 4;
+      top: -25px;
+      left: 50%;
+      width: 15px;
+      height: 25px;
+      transform: translateX(-50%);
+      background: #eeaf9c;
+      border-radius: 30px 30px 50px 50px;
+      background: repeating-linear-gradient(90deg, #061420, #061420 2px, #102131 2px, #102131 4px);
+      box-shadow: 2px 2px 8px #000;
+      
+    }
+      .head:before,
+      .head:after {
         content: "";
         position: absolute;
-        top: 28px;
-        left: 0px;
-        width: 0;
-        height: 0;
-        border-left: 10px solid transparent;
-        border-right: 10px solid transparent;
-        border-top: 35px solid #102131;
+        top: -45px;
+        right: 10px;
+        width: 95px;
+        height: 90px;
+        border: solid 1px #102131;
+        border-color: #102131 transparent transparent transparent;
+        border-radius: 50%/50px 50px 0 0;
+        transform: rotate(60deg);
       }
-      .head {
-        position: absolute;
-        z-index: 4;
-        top: -25px;
-        left: 50%;
-        width: 15px;
-        height: 25px;
-        transform: translateX(-50%);
-        background: #eeaf9c;
-        border-radius: 30px 30px 50px 50px;
-        background: repeating-linear-gradient(90deg, #061420, #061420 2px, #102131 2px, #102131 4px);
-        box-shadow: 2px 2px 8px #000;
-        
-      }
-        .head:before,
-        .head:after {
-          content: "";
-          position: absolute;
-          top: -45px;
-          right: 10px;
-          width: 95px;
-          height: 90px;
-          border: solid 1px #102131;
-          border-color: #102131 transparent transparent transparent;
-          border-radius: 50%/50px 50px 0 0;
-          transform: rotate(60deg);
-        }
-        .head:after {
-          right: auto;
-          left: 10px;
-          transform: rotate(-60deg);
-    }
+      .head:after {
+        right: auto;
+        left: 10px;
+        transform: rotate(-60deg);
+  }
 
 .wing {
+position: absolute;
+left: 51%;
+margin: auto;
+top: 0;
+bottom: 0;
+background: #102131;
+height: 30px;
+width: 30px;
+transform: rotate(45deg);
+animation:right-wing 0.3s;
+animation-duration: 2s;
+
+}
+.wing:after {
+  background: #102131;
+  content: "";
+  border-radius: 50%;
   position: absolute;
-  left: 51%;
+  width: 30px;
+  height: 30px;
+  top: 0px;
+  left: 18px
+
+}
+.wing:before {
+  background-color: #102131;
+  content: "";
+  border-radius: 50%;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  top: -18px;
+  left: 0px;
+
+}
+.left-wing{
+  position: absolute;
+  left: 40%;
   margin: auto;
   top: 0;
   bottom: 0;
   background: #102131;
   height: 30px;
   width: 30px;
-  transform: rotate(45deg);
-  animation:right-wing 0.3s;
-  animation-duration: 2s;
-  
-  }
-  .wing:after {
-    background: #102131;
-    content: "";
-    border-radius: 50%;
-    position: absolute;
-    width: 30px;
-    height: 30px;
-    top: 0px;
-    left: 18px
-  
-  }
-  .wing:before {
-    background-color: #102131;
-    content: "";
-    border-radius: 50%;
-    position: absolute;
-    width: 30px;
-    height: 30px;
-    top: -18px;
-    left: 0px;
-  
-  }
-  .left-wing{
-    position: absolute;
-    left: 40%;
-    margin: auto;
-    top: 0;
-    bottom: 0;
-    background: #102131;
-    height: 30px;
-    width: 30px;
-    transform: rotate(-135deg);
+  transform: rotate(-135deg);
 
-  }
-  .left-wing:after {
-    background-color: #102131;
-    content: "";
-    border-radius: 50%;
-    position: absolute;
-    width: 30px;
-    height: 30px;
-    top: 0px;
-    left: 18px
-  
-  }
-  .left-wing:before {
-    background-color: #102131;
-    content: "";
-    border-radius: 50%;
-    position: absolute;
-    width: 30px;
-    height: 30px;
-    top: -18px;
-    left: 0px;
-  
-  }
+}
+.left-wing:after {
+  background-color: #102131;
+  content: "";
+  border-radius: 50%;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  top: 0px;
+  left: 18px
+
+}
+.left-wing:before {
+  background-color: #102131;
+  content: "";
+  border-radius: 50%;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  top: -18px;
+  left: 0px;
+
+}
 
 
 
 
 
 @media screen and (min-width: 320px) and (max-width: 480px)  
-  {
-    .navbar{
-         height: 90px;  
-    }
-    .navbar .flex {
-        flex-direction: column;
-    }
-    .navbar ul{
-       margin-top: -10px;   
-        
-        
-    }
-    .div-box{
-      z-index: -1;
-    }
-    .block-item{
-        width: 230px;
-       margin: 0;
-       
-    }
-    .block-absolute-item{
-        left: 10px;
-    }
+{
+  .navbar{
+       height: 90px;  
   }
+  .navbar .flex {
+      flex-direction: column;
+  }
+  .navbar ul{
+     margin-top: -10px;   
+      
+      
+  }
+  .div-box{
+    z-index: -1;
+  }
+  .block-item{
+      width: 320px;
+     margin: 0;
+     
+  }
+  .block-absolute-item{
+      left: 10px;
+  }
+}
 
 @keyframes right-wing {
-  0% {
-    transform: rotate(10deg) rotate3d(0, 1, 0, -10deg);
-  }
-  50% {
-    transform: rotate(10deg) rotate3d(0, 1, 0, -60deg);
-  }
-  100% {
-    transform: rotate(10deg) rotate3d(0, 1, 0, -10deg);
-  }
+0% {
+  transform: rotate(10deg) rotate3d(0, 1, 0, -10deg);
+}
+50% {
+  transform: rotate(10deg) rotate3d(0, 1, 0, -60deg);
+}
+100% {
+  transform: rotate(10deg) rotate3d(0, 1, 0, -10deg);
+}
 }
 @keyframes ballsdiv {
-  20%   {left: 400px; top:100px;}
-  100% {top:100px; left: 400px;}
+20%   {left: 400px; top:100px;}
+100% {top:100px; left: 400px;}
 }
 @keyframes dreamy{
-  50% {color: #fcfc;;}
-  25%  {color: #94b6e7;}
-  50%  {color: #fcfbfc;}
-  100% {color: #afc9ff ;}
-  100% {color: #c7d8ff;}
-  100% {color: #dbe9fe;}
-  100% {color: #ccc;}
+50% {color: #fcfc;;}
+25%  {color: #94b6e7;}
+50%  {color: #fcfbfc;}
+100% {color: #afc9ff ;}
+100% {color: #c7d8ff;}
+100% {color: #dbe9fe;}
+100% {color: #ccc;}
 }
